--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "description": "The frontend for the Stacksats Platform",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
